MODIFY: 챌린지 지도 상세보기, 마이페이지 API 수정
1. 챌린지 지도 상세보기 API에 SpanDelta 적용
2. UserMapInfo.class에 닉네임 추가
3. 마이페이지에서 불필요한 시간 포매팅 제거

+ 미반영된 예외 코드 추가